@@ -1,8 +1,10 @@
 1.2 - [RELEASEDATE]
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+
 - Fixed bug #9219: Added sql HAVING condition. Patch by Christian Michel.
 - Fixed bug #9567: query->bindValue() sets value in query->boundParameters
-	
+- Fixed bug #9466: Oracle limit does not return $this.
+
 
 1.2beta2 - Monday 20 November 2006
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
@@ -19,7 +21,7 @@
 - Added support for SQLite in-memory databases through the DSN:
   "sqlite://:memory" and the dbParams:
   "array( 'handler' => 'sqlite', 'port' => 'memory' );".
-- Fixed bug #9159: No alias substitution for 'table.cloumn' syntax.
+- Fixed bug #9159: No alias substitution for 'table.column' syntax.
 
 
 1.1.4 - Tuesday 24 October 2006
